io-hotmoka-examples/src/main/java/io/hotmoka/examples/errors/inconsistentthrowsexceptions1/Sub.java
package io.hotmoka.examples.errors.inconsistentthrowsexceptions1;

public class Sub extends Super {
	public void m() {}
}